[gd_scene load_steps=3 format=3 uid="uid://cmbn014d7gvgl"]

[ext_resource type="Script" uid="uid://mb6qto75e08c" path="res://Scripts/Menu/UI/dropdown_ui.gd" id="1_d4ncn"]
[ext_resource type="Script" uid="uid://bl2yppgmlpvtt" path="res://Scripts/Menu/UI/change_ui_language_label.gd" id="2_c22es"]

[node name="DropdownUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4ncn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -17.5
offset_right = 350.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer" groups=["tranlate_ui"]]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
text = "Opt"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_c22es")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="bot_izq" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "<"

[node name="Valor" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "eng"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bot_der" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = ">"

[connection signal="pressed" from="HBoxContainer/bot_izq" to="." method="_on_bot_izq_pressed"]
[connection signal="pressed" from="HBoxContainer/bot_der" to="." method="_on_bot_der_pressed"]
